--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
             <classifier>mule-plugin</classifier>
         </dependency>
         <dependency>
-            <groupId>com.mycompany</groupId>
-            <artifactId>s-test-molmedomarin</artifactId>
-            <version>1.0.0</version>
-            <classifier>raml</classifier>
-            <type>zip</type>
-        </dependency>
+ 			<groupId>f410b1b4-6203-4154-a14a-d77dd6823489</groupId>
+ 			<artifactId>s-test-molmedomarin</artifactId>
+ 			<version>1.0.3</version>
+ 			<classifier>raml</classifier>
+ 			<type>zip</type>
+ 		</dependency>
         <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-apikit-module</artifactId>
