--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,19 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<classifier>---- select project type ----</classifier>
+					<classifier>mule-application</classifier>
+                    <cloudhub2Deployment>
+                        <uri>https://anypoint.mulesoft.com</uri>
+                        <provider>MC</provider>
+                        <environment>Sandbox</environment>
+                        <target>Cloudhub-US-East-2</target>
+                        <muleVersion>${app.runtime}</muleVersion>
+                        <username>${{ secrets.ANYPOINT_PLATFORM_USERNAME }}</username>
+                        <password>${{ secrets.ANYPOINT_PLATFORM_PASSWORD }}</password>
+                        <applicationName>p-test-rdiezcastro-imp</applicationName>
+                        <replicas>1</replicas>
+                        <vCores>0.1</vCores>
+                    </cloudhub2Deployment>
 				</configuration>
 			</plugin>
 		</plugins>
