--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>f410b1b4-6203-4154-a14a-d77dd6823489</groupId>
 	<artifactId>s-test-molmedomarin-imp</artifactId>
 	<version>1.0.3</version>
 	<packaging>mule-application</packaging>
