--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.9.0</app.runtime>
+		<app.runtime>4.9.3:3e-java17</app.runtime>
 		<mule.maven.plugin.version>4.3.0</mule.maven.plugin.version>
 	</properties>
 
@@ -39,7 +39,7 @@
                         <muleVersion>${app.runtime}</muleVersion>
                         <username>${{ secrets.ANYPOINT_PLATFORM_USERNAME }}</username>
                         <password>${{ secrets.ANYPOINT_PLATFORM_PASSWORD }}</password>
-                        <applicationName>p-test-rdiezcastro-imp</applicationName>
+                        <applicationName>s-test-molmedomarin</applicationName>
                         <replicas>1</replicas>
                         <vCores>0.1</vCores>
                     </cloudhub2Deployment>
